--- a/rekognition/index.html
+++ b/rekognition/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Demo: Take a Selfie With JavaScript</title>
+    <title>CloudAcademy: AWS Rekogition Demo</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
