--- a/rekognition/index.html
+++ b/rekognition/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <h3>Demo: AWS Rekognition</h3>
+    <title>CloudAcademy: AWS Rekogition Demo</title>
 
     <div class="container">
 
