fixed header element - h3

--- a/rekognition/demo-sdk/index.html
+++ b/rekognition/demo-sdk/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <title>CloudAcademy: AWS Rekogition Demo</title>
+    <h3>CloudAcademy: AWS Rekogition Demo</h3>
 
     <div class="container">
 
